# embed_arxiv_simpler

./: .env.sample  .gitignore  README.md  binarise_embeddings.py  consolidate.py  convert_to_parquet.py  create_embeddings.py  download_hf.py  download_metadata.py  embed_abstract.py  embed_abstract_all.py  embed_abstract_diff.py  embed_abstract_selected.py  merge.py  merge_diff.py  prepare_metadata.py  prepare_milvus.py  prepare_zilliz.py  pyproject.toml  requirements.txt  reset_zilliz_collection.py  split_by_year.py  start_milvus.sh  start_milvus_SE.sh  trim_metadata.py  update_embeddings.py  update_embeddings.sh  update_milvus.sh  update_zilliz.py  upload_hf.py
