[project]
name = "embed-arxiv-simpler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "datasets>=3.6.0",
    "gradio>=5.35.0",
    "huggingface-hub>=0.33.1",
    "kagglehub>=0.3.13",
    "mixedbread-ai>=2.2.6",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pymilvus[bulk-writer]>=2.5.14",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
